--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jersey'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
+
+    implementation group: 'io.temporal', name: 'temporal-sdk', version: '1.5.0'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.5'
+    implementation group: 'commons-configuration', name: 'commons-configuration', version: '1.10'
+
     implementation('org.springframework.boot:spring-boot-starter-mail')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
